# agent-testbed

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  scratch_test_mcp.py  verify_root_agent.py
.serena/: project.yml
agents/BookingOrchestrator/: main.py  pyproject.toml
agents/BookingOrchestrator/booking_orchestrator/: agent.py  prompt.py  tools.py
agents/BookingOrchestrator/booking_orchestrator/sub_agents/: payment.py  validator.py
agents/CarRentalSpecialist/: Dockerfile  main.py  pyproject.toml
agents/CarRentalSpecialist/car_rental_specialist/: agent.py  prompt.py
agents/FlightSpecialist/: Dockerfile  main.py  pyproject.toml
agents/FlightSpecialist/flight_specialist/: agent.py  prompt.py
agents/FlightSpecialist/flight_specialist/sub_agents/: seat_selector.py
agents/HotelSpecialist/: Dockerfile  main.py  pyproject.toml
agents/HotelSpecialist/hotel_specialist/: agent.py  prompt.py
agents/RootRouter/: main.py  pyproject.toml
agents/RootRouter/root_router/: agent.py  prompt.py  tools.py
agents/RootRouter/root_router/sub_agents/: inspiration.py  planning.py
agents/WeatherSpecialist/: Dockerfile  main.py  pyproject.toml
agents/WeatherSpecialist/weather_specialist/: agent.py  prompt.py
docs/: A2A.md  ADK_INSTRUMENTATION.md  APPHUB.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  MCP.md  NETWORKING.md  SKILLS_LEARNED.md  TELEMETRY.md  TESTING.md  TRAFFIC_GENERATOR.md  TUNNELING.md
mcp_servers/Inventory_MCP/: Dockerfile  main.py  pyproject.toml
mcp_servers/Profile_MCP/: Dockerfile  main.py  pyproject.toml
scripts/: deploy.py  deploy_agent_engine.py  run_all.py  test_pickle.py  test_runner.py  test_standalone_agents.py  traffic_loop.py  verify_pickle.py  verify_standalone_agents.py
terraform/: apphub.tf  bastion.tf  cloud_run.tf  direct_cloud_run_ilb.tf  dns.tf  firewall.tf  functions.tf  gke.tf  iam.tf  imports.tf  locals.tf  main.tf  network_attachments.tf  networking.tf  outputs.tf  scheduler.tf  services.tf  storage.tf  terraform.tfvars.example  variables.tf  vertex_agents.tf
testbed_utils/: config.py  logging.py  mcp_client.py  mcp_trace_context.py  mock_llm.py  runner.py  services.py  telemetry.py  trace_context.py  trace_verifier.py
tests/: conftest.py  integration_test.py  test_all_paths.py  test_mcp_meta.py  test_trace_paths.py  test_trace_verification.py  test_unit_tools.py
traffic_generator/: main.py  pyproject.toml
