[project]
name = "traffic-generator"
version = "0.1.0"
description = "traffic-generator service"
dependencies = [
    "functions-framework",
    "requests",
    "flask",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-requests",
]

[tool.uv]
package = false
