[project]
name = "traffic-generator"
version = "0.1.0"
description = "traffic-generator service"
dependencies = [
    "functions-framework",
    "requests",
    "flask",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-requests",
    "google-auth",
    "google-cloud-aiplatform>=1.93.0",
]

[tool.uv]
package = false
